# libArgsParser

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
demo/: CMakeDemo.cmake  main.cpp
include/: argsparser.h
include/argsparser/: autohelp.h  common.h  container.h  containerImpl.h  input_container.h  parser.h  parserImpl.h  token.h  typed_input_container.h  typed_value_wrapper.h  user_input_container.h  util.h  validating_parser.h  value_wrapper.h  valuewrapper.h  version.hpp
src/: Autohelp.cpp  Container.cpp  Parser.cpp  Util.cpp  ValueWrapper.cpp  autohelp.cpp  container.cpp  data_container.cpp  input_container.cpp  parameter_option.cpp  parser.cpp  positional_option.cpp  register_parameter_option.cpp  token.cpp  user_input_container.cpp  util.cpp  value_option.cpp  value_wrapper.cpp
test/: CMakeTests.cmake  main.cpp
